compiler/testData/cli/jvm/XjspecifyAnnotation/jspecifyStrict.out
compiler/testData/cli/jvm/XjspecifyAnnotation/jspecifyUsage.kt:4:11: error: null cannot be a value of a non-null type 'String'.
    a.foo(null)
          ^^^^
compiler/testData/cli/jvm/XjspecifyAnnotation/jspecifyUsage.kt:5:12: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type 'String?'.
    a.bar().length
           ^
COMPILATION_ERROR
